# coagulated-deep-research

./: .env.example  .gitignore  README.md  agentic_deep_research_master_blueprint.md  chatGPT - deep-research-report.md  gemini - Agentic Deep Research Blueprint.md  pyproject.toml
.agents/: AGENTS.md  GEMINI.md  PHASE_2_WALKTHROUGH.md
cli/: main.py
config/: __init__.py  logging_config.py  settings.py
core/: graph.py  llm_router.py  mcp_client.py  models.py  router.py
core/nodes/: __init__.py  aggregator.py  evaluator.py  research.py  scoping.py  verifier.py  writer.py
core/utils/: json_cleaner.py
db/: cache.py  embeddings.py  vector_store.py
docker/: docker-compose.yml
docker/searxng/: settings.yml
docs/: spec.md
docs/tasks/: phase_1_tasks.md  phase_2_tasks.md  phase_3_tasks.md  phase_4_tasks.md  phase_5_tasks.md  phase_6_tasks.md
manual testing/: log output.txt
planning/: browser_explorer.py  mango_router.py  mcts_engine.py
scratch/: run_graph_test.py  test_all_model_garden_gemini.py  test_ddg_live.py  test_graph_scoping.py  test_vertex_connection.py
search/: __init__.py  ddg.py  dedup.py  diversify.py  fusion.py  scraper.py  searxng.py
tests/: conftest.py
tests/fixtures/: sample_research_brief.json
tests/integration/: test_advanced_planning_e2e.py  test_dream_evaluation_e2e.py  test_full_pipeline_e2e.py  test_graph_e2e.py  test_scoping_flow.py  test_search_pipeline.py  (+2 more)
ui/: app.py  log_streamer.py  state.py  utils.py
verification/: claim_extractor.py  confidence_scorer.py  pipeline.py  quote_verifier.py  source_checker.py
(+33 files in other folders)
